--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.2.12
 django-bootstrap==0.2.4
 django-bootstrap4==2.3.1
 django-heroku==0.3.1
+djangorestframework==3.13.1
 gunicorn==20.1.0
 Pillow==9.1.0
 pkg_resources==0.0.0
